...
                                                    .resizable()
                                                    .foregroundStyle(.red)
                                                    .frame(width: 35, height: 35)
                                            }
                                            
                                        }
                                        .accessibilityIdentifier("dismissAIButton")
                                    }
                                }
                                
                                // header
                                TravelSearchHeaderView(triggerAI: $triggerAI, serverService: serverService, firebaseAuthService: firebaseAuthService, navigationPath: $navigationPath, isPresenting: $isPresenting)
                            }
...
                                .padding(.horizontal, 45)
                                .fixedSize(horizontal: false, vertical: true)
                            }
                            .disabled(viewModel.departure.iata == "" || viewModel.arrival.iata == "")
                            .frame(maxWidth: 800)
                            .padding(.top, 20)
                            .accessibilityIdentifier("searchButton")
                            
                            AIPredictionView(viewModel: viewModel, triggerAI: $triggerAI, showAlertPrediction: $showAlertPrediction, navigationSplitViewVisibility: $navigationSplitViewVisibility)
                        }
                        .frame(maxWidth: 800)
                    }
                    .scrollClipDisabled(true)
...
        HStack {
            Text("Search Travel")
                .font(.system(size: 32).bold())
                .padding(.vertical)
                .fontWeight(.semibold)
                .frame(maxWidth: .infinity, alignment: .leading)
                .accessibilityIdentifier("travelSearchViewTitle")
            
            Spacer()
            
            if horizontalSizeClass == .compact {
                // iOS
                UserPreferencesButtonView(navigationPath: $navigationPath, isPresenting: $isPresenting)
...
    var body: some View {
        Text("From")
            .frame(maxWidth: .infinity, alignment: .leading)
            .padding(EdgeInsets(top: 10, leading: 40, bottom: 0, trailing: 40))
            .font(.title)
            .fontWeight(.bold)
            .accessibilityIdentifier("departureLabel")
    }
}

private struct DepartureCompleterView: View {
    @Environment(\.modelContext) private var modelContext: ModelContext
    @Environment(\.colorScheme) var colorScheme: ColorScheme
...
                        .foregroundColor(viewModel.departure.cityName == "" ? .secondary : AppColors.mainColor)
                        .padding(EdgeInsets(top: 10, leading: 20, bottom: 10, trailing: 0))
                        .frame(maxWidth: .infinity, alignment: .leading)
                        .font(.title2)
                        .fontWeight(viewModel.departure.cityName == "" ? .light : .semibold)
                }
                .accessibilityIdentifier("departureButton")
            }
            .background(colorScheme == .dark ? Color(red: 48/255, green: 48/255, blue: 48/255) : Color(uiColor: .systemBackground))
            .cornerRadius(10)
        }
        .fullScreenCover(isPresented: $departureTapped ) {
            CompleterView(modelContext: modelContext, searchText: viewModel.departure.cityName,
...
    var body: some View {
        Text("To")
            .frame(maxWidth: .infinity, alignment: .leading)
            .padding(EdgeInsets(top: 10, leading: 40, bottom: 0, trailing: 40))
            .font(.title)
            .fontWeight(.bold)
            .accessibilityIdentifier("destinationLabel")
    }
}

private struct DestinationCompleterView: View {
    @Environment(\.modelContext) private var modelContext: ModelContext
    @Environment(\.colorScheme) var colorScheme: ColorScheme
...
                        .foregroundColor (viewModel.arrival.cityName == "" ? Color.secondary : triggerAI ? Color.white : AppColors.mainColor)
                        .padding(EdgeInsets(top: 10, leading: 20, bottom: 10, trailing: 0))
                        .frame(maxWidth: .infinity, alignment: .leading)
                        .font(.title2)
                        .fontWeight(viewModel.arrival.cityName == "" ? .light : .semibold)
                }
                .accessibilityIdentifier("destinationButton")
            }
            .background(triggerAI ? LinearGradient(gradient: Gradient(colors: [.green, .mint, .blue]), startPoint: .bottomLeading, endPoint: .topTrailing) : LinearGradient(gradient: Gradient(colors: [colorScheme == .dark ? Color(red: 48/255, green: 48/255, blue: 48/255) : Color.white]), startPoint: .bottomLeading, endPoint: .topTrailing))
            .cornerRadius(10)
        }
        .fullScreenCover(isPresented: $destinationTapped ) {
            CompleterView(modelContext: modelContext, searchText: viewModel.arrival.cityName,
...
            .scaledToFit()
            .minimumScaleFactor(0.6)
            .lineLimit(1)
            .foregroundStyle(colorScheme == .dark ? .white : .black)
        }
        .padding(.vertical, 10)
        .accessibilityIdentifier("outwardDateButton")
        
        .frame(maxWidth: 310)
    }
}

private struct ReturnDatePickerView: View {
...
            .minimumScaleFactor(0.6)
            .lineLimit(1)
            .foregroundStyle(viewModel.oneWay ? Color.secondary : colorScheme == .dark ? Color.white : Color.black)
        }
        .padding(.vertical, 10)
        .disabled(viewModel.oneWay)
        .accessibilityIdentifier("returnDateButton")
        
        .frame(maxWidth: 310)
    }
}

private struct DatePickerView: View {
...
                        dateTapped = false
                        isPresenting = false
                    }
                    .fontWeight(.bold)
                    .padding(.trailing, 20)
                    .padding(.bottom, 15)
                    .accessibilityIdentifier("datePickerDoneButton")
                }
                
                Text(title)
                    .font(.system(size: 22).bold())
                    .padding(.top, 30)
                    .accessibilityIdentifier("datePickerTitle")
            }
            DatePicker("", selection: $date, in: limitDate...Date.distantFuture)
                .datePickerStyle(.graphical)
                .labelsHidden()
                .accessibilityIdentifier("datePickerElement")
                .padding(.top, 20)
...
                            }
                            .padding(5)
                            .padding(.horizontal, 5)
                        }
                        .frame(height: 60)
                    }
                    .accessibilityIdentifier("newGenerationButton")
                } else {
                    // iPadOS
                    
                    Button(action: {
                        if viewModel.predictedCities.count == viewModel.predictionShown + 1 {
                            viewModel.predictionShown = 0
...
