...
                    }
                    .padding(5)
                    .padding(.horizontal, 5)
                }
                .frame( height: 60)
            }
            .accessibilityIdentifier("getRecommendationButton")
        } else {
            // iPadOS
            
            Button(action: {
                viewModel.getRecommendation()
                confirm(viewModel.predictedCities)
...
